# box-rust-api

./: .gitignore  Cargo.toml
box-rust-api/: Cargo.toml
box-rust-api-full/: README.md
box-rust-api-full-multi/src/apis/: authorization_api.rs  box_sign_api.rs  classifications_api.rs  classifications_on_files_api.rs  classifications_on_folders_api.rs  collaborations_api.rs  collaborations_list_api.rs  collections_api.rs  comments_api.rs  device_pinners_api.rs  domain_restrictions_for_collaborations_api.rs  domain_restrictions_user_exemptions_api.rs  downloads_api.rs  email_aliases_api.rs  events_api.rs  file_requests_api.rs  file_version_legal_holds_api.rs  file_version_retentions_api.rs  file_versions_api.rs  files_api.rs  folder_locks_api.rs  folders_api.rs  group_memberships_api.rs  groups_api.rs  integration_mappings_slack_api.rs  invites_api.rs  legal_hold_policies_api.rs  legal_hold_policy_assignments_api.rs  metadata_cascade_policies_api.rs  metadata_instances_files_api.rs  metadata_instances_folders_api.rs  metadata_templates_api.rs  post_integration_mappings_slack_api.rs  recent_items_api.rs  retention_policies_api.rs  retention_policy_assignments_api.rs  search_api.rs  shared_links_files_api.rs  shared_links_folders_api.rs  shared_links_web_links_api.rs  (+28 more)
box-rust-api-full/src/apis/: uploads_api.rs
box-rust-api-full/src/models/: metadata_query_order_by_inner.rs
box-rust-api/src/: lib.rs
box-rust-api/src/apis/: authorization_api.rs  folders_api.rs  mod.rs  users_api.rs
box-rust-api/src/models/: file_full.rs  folder_full.rs  items_all_of_entries_inner.rs  mod.rs  user_full.rs
examples/: authorization_main.rs  box_hackathon_2023_demo.rs  files_main.rs  folders_main.rs  users_main.rs
examples/box_oauth_app/: box_authentication.rs  http_request_listener.rs  utils.rs
src/: authorization.rs  authorization_main.rs  box_api_client.rs  box_oauth.rs  box_utils.rs  files_main.rs  folders_main.rs  kamil_oauth_main.rs  lib.rs  main.rs  managers.rs  models.rs  oauth_app.rs  upload_experiment.rs  users_main.rs
src/authorization/: developer_token.rs  outh_authorization.rs
src/box_authentication/: box_oauth.rs
src/managers/: files.rs  folders.rs  users.rs
src/models/: collaborations_all_of_order.rs  file.rs  file_all_of_created_by.rs  file_all_of_modified_by.rs  file_all_of_owned_by.rs  file_all_of_parent.rs  file_all_of_path_collection.rs  file_all_of_shared_link.rs  file_mini_all_of_file_version.rs  files.rs  folder__full_all_of_permissions.rs  folder__full_all_of_watermark_info.rs  folder_all_of_created_by.rs  folder_all_of_folder_upload_email.rs  folder_all_of_item_collection.rs  folder_all_of_modified_by.rs  folder_all_of_owned_by.rs  folder_all_of_parent.rs  folder_all_of_path_collection.rs  folder_all_of_shared_link.rs  folder_full.rs  folder_full_all_of_classification.rs  folder_mini.rs  item_type.rs  items_all_of_entries_inner.rs  shared_link_permissions.rs  tracking_code.rs  user_full.rs  user_full_all_of_enterprise.rs
tests/: folders_tests.rs  users_tests.rs
(+3 files in other folders)
