[[bin]]
name = "users_main"
path = "src/users_main.rs"

[[bin]]
name = "folders_main"
path = "src/folders_main.rs"

[[bin]]
name = "files_main"
path = "src/files_main.rs"

[[bin]]
name = "authorization_main"
path = "src/authorization_main.rs"



[package]
name = "box-rust-api-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
openapi = { version = "2.0.0", path = "box-rust-api" }
rand = "0.8.5"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
serde_qs = "0.12.0"
tiny_http = "0.12.0"
tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread", "macros"] }
url = { version = "2", features = ["serde"] }
urlencoding = "2.1.2"
webbrowser = "0.8.10"
