[lib]
name = "box_rust_sdk"
path = "src/lib.rs"

[[bin]]
name = "users_main"
path = "examples/users_main.rs"

[[bin]]
name = "folders_main"
path = "examples/folders_main.rs"

[[bin]]
name = "files_main"
path = "examples/files_main.rs"

[[bin]]
name = "authorization_main"
path = "examples/authorization_main.rs"

[[bin]]
name = "upload_experiment"
path = "src/upload_experiment.rs"

[[bin]]
name = "oauth_app"
path = "examples/box_oauth_app/oauth_app.rs"

[[bin]]
name = "kamil_oauth_app"
path = "src/kamil_oauth_main.rs"

[package]
name = "box-rust-api-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
dotenv = "0.15.0"
openapi = { version = "2.0.0", path = "box-rust-api" }
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["stream"]}
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_qs = "0.12.0"
serde_with = "3.0.0"
tiny_http = "0.12.0"
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = "0.7.8"
url = { version = "2", features = ["serde"] }
urlencoding = "2.1.2"
webbrowser = "0.8.10"
